# piano-conversion

./: .gitignore  DESIGN.md  LICENSE  README.md  Symbols.bck  Symbols.dcm
adc-board/: .gitignore  AD8544.lib  ADC Board-cache.lib  ADC Board.kicad_pcb  ADC Board.kicad_prl  ADC Board.kicad_pro  ADC Board.net  ADC Board.pro  ADC Board.sch  Analog Input.kicad_sch  Analog Input.sch  ISL83490.lib  MCP1501.lib  RS485.kicad_sch  RS485.sch  fp-info-cache  fp-lib-table  sym-lib-table
cubemx/: adc-board.ioc  led-power.ioc  main-board.ioc  midi-board.ioc  pedal-board.ioc
firmware/: .gitignore
footprints.pretty/: 114-00841-68.kicad_mod  PPB-11861.kicad_mod  RJ45_DOUBLE.kicad_mod  SDS-50J.kicad_mod  SJ-63053A.kicad_mod
hardware/: README.md  STM32G030Fx.kicad_sym  Symbols.lib  analyze.py
led-power/: MCP1501.lib  fp-info-cache  led-power-cache.lib  led-power.kicad_pcb  led-power.net  led-power.pro  led-power.sch
led-power-simple/: fp-info-cache  led-power-simple-cache.lib  led-power-simple.kicad_pcb  led-power-simple.net  led-power-simple.pro  led-power-simple.sch
led-test-bar/: fp-info-cache  led-test-bar-cache.lib  led-test-bar.kicad_pcb  led-test-bar.net
link-adapter/: fp-info-cache  link-adapter-cache.lib  link-adapter.kicad_pcb  link-adapter.net  link-adapter.pro  link-adapter.sch
main-board/: 8P8CDouble.dcm  8P8CDouble.lib  Power.sch  fp-info-cache  main-board-cache.lib  main-board.kicad_pcb  main-board.net  main-board.pro  main-board.sch  sym-lib-table
mechanical/: QRE1113-protector.scad  README.md  (+5 more)
sensor-tests/RPicoADC/: CMakeLists.txt  adc_3ch.c
(+281 files in other folders)
